# fum_first_project

./: 1  1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  DSU.h  README.md  importer.h  includer.h  interpreter.h  mazegenerator.h
Phase1/: 1.cpp
Phase2/: 2.cpp  includer.h  interpreter.h
Phase3/: 3.cpp
Phase6/: 6.cpp  data.txt  gamesaver.h  includer.h  interpreter.h  mazegenerator.h  moves.h  saveandload.h  structures.h
phase4/: 4.cpp  draftsman.h  interpreter.h  mazegenerator.h  moves.h
phase5/: 5.cpp  interpreter.h  mazegenerator.h  moves.h
